Add contact site to button for more info

--- a/pricing.html
+++ b/pricing.html
@@ -161,7 +161,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">Package Special</h4>
                         </div>
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Contact for Info</a></div>
+                        <div class="panel-footer"> <a href="/contact" class="btn btn-white mb-10" role="button">Contact for Info</a></div>
                     </div>
                 </div>
             </div>
