added wording to services

--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
           <!-- /.row -->
           <div class="row">
             <div class="col-12">
-                <p>Outdoor Photography is provided at the moment. Once a studio is available, I will be providing and studio services. I do not provide wedding photography but will gladly recommend fellow wedding photographers.</p>
+                <p>Outdoor Photography is provided at the moment. Once a studio is available, I will be providing outdoor and studio services. I do not provide wedding photography but will gladly recommend fellow wedding photographers.</p>
             </div>
           </div>
           <!-- /.row -->
