update instagram user

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
         <!--/.tiles -->
         <div class="space40"></div>
-        <div class="text-center"><a href="#" class="btn">Follow on Instagram @PereiraATXFoto</a></div>
+        <div class="text-center"><a href="#" class="btn">Follow on Instagram @pereiraatxfoto</a></div>
       </div>
       <!-- /.container -->
     </div>
