--- a/services.html
+++ b/services.html
@@ -59,6 +59,7 @@
           <div class="row">
             <div class="col-md-4">
               <ul class="unordered-list">
+                <li>Photography Subscription</li>
                 <li>Graduation Photography</li>
                 <li>Family Photograpy</li>
                 <li>Couple Photograpy</li>
