--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@
                 <div class="box bg-white shadow p-30">
                   <figure class="main mb-30"><img src="style/images/art/si1.jpg" alt="" /></figure>
                   <h4>Photography</h4>
-                  <p class="mb-10">Find out the various categories of photography I service.</p>
+                  <p class="mb-10">Find out the various categories of photography services I provide.</p>
                 </div>
                 <!-- /.box -->
               </a>
