--- a/pricing.html
+++ b/pricing.html
@@ -60,7 +60,7 @@
                     <div class="pricing panel box bg-pastel-lavender">
                         <div class="panel-heading">
                             <h4 class="panel-title">Red Bud Package</h4>
-                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">50</span>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">100</span>
                                 <span class="price-duration">per session</span></div>
                         </div>
                         <!--/.panel-heading -->
@@ -70,15 +70,15 @@
                                     <td><strong>1</strong> location</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>15</strong> minute session</td>
+                                    <td><strong>30</strong> minute session</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>5</strong> Digital Images</td>
+                                    <td><strong>10</strong> Digital Images</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <ul>
-                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
+                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
                                             <li><strong>Photo Print Release</strong></li>    
                                         </ul>
                                     </td>
@@ -86,7 +86,7 @@
                             </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
                     </div>
                     <!--/.pricing -->
                 </div>
@@ -105,41 +105,6 @@
                                     <td><strong>1</strong> location</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>45</strong> minute session</td>
-                                </tr>
-                                <tr>
-                                    <td><strong>15</strong> Digital Images</td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <ul>
-                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
-                                            <li><strong>Photo Print Release</strong></li>    
-                                        </ul>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                        <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
-                    </div>
-                    <!--/.pricing -->
-                </div>
-                <!--/column -->
-                <div class="col-md-4">
-                    <div class="pricing panel box bg-pastel-leaf">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">Lady Bird Package</h4>
-                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">200</span>
-                                <span class="price-duration">per session</span></div>
-                        </div>
-                        <!--/.panel-heading -->
-                        <div class="panel-body">
-                            <table class="table">
-                                <tr>
-                                    <td><strong>1-2</strong> location (Less than 10 min drive)</td>
-                                </tr>
-                                <tr>
                                     <td><strong>60</strong> minute session</td>
                                 </tr>
                                 <tr>
@@ -148,7 +113,7 @@
                                 <tr>
                                     <td>
                                         <ul>
-                                            <li><strong>Online Delivery & Printing Options (via shootproof)</strong></li>
+                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
                                             <li><strong>Photo Print Release</strong></li>    
                                         </ul>
                                     </td>
@@ -156,27 +121,49 @@
                             </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Book a Session</a></div>
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
                     </div>
                     <!--/.pricing -->
                 </div>
                 <!--/column -->
-            </div>
-            <!--/.row -->
-            <div class="row mt-3">
-                <div class="col-4 mx-auto">
-                    <div class="pricing panel box bg-pastel-violet">
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-leaf">
                         <div class="panel-heading">
-                            <h4 class="panel-title">Package Special</h4>
+                            <h4 class="panel-title">Lady Bird Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">250</span>
+                                <span class="price-duration">per session</span></div>
                         </div>
-                        <div class="panel-footer"> <a href="/contact" class="btn btn-white mb-10" role="button">Contact for Info</a></div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1-2</strong> location (Less than 20 min drive)</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>120</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>45</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
                     </div>
+                    <!--/.pricing -->
                 </div>
-            </div>
-            <!--/.row -->
+                <!--/column -->
             <div class="row mt-3">
                 <div class="col-12 mx-auto text-center">
-                    <p>All pricing includes processing time and set up</p>
+                    <p>All pricing includes processing time and set up. Unedited photos are sent upon request and free of charge.</p>
                     <p>(5-10 business days processing time)</p>
                     <p>For all other photography inquiries that are not mentioned in this pricing site please contact me.</p>
                 </div>
