Add subscription title

--- a/pricing.html
+++ b/pricing.html
@@ -161,6 +161,16 @@
                     <!--/.pricing -->
                 </div>
                 <!--/column -->
+            </div>
+            <!--/.row -->
+            <div class="row mt-3">
+                <div class="col-4 mx-auto">
+                    <div class="pricing panel box bg-pastel-violet">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Social Medial Photography Subscription</h4>
+                </div>
+            </div>
+            <!--/.row -->
             <div class="row mt-3">
                 <div class="col-12 mx-auto text-center">
                     <p>All pricing includes processing time and set up. Unedited photos are sent upon request and free of charge.</p>
