--- a/pricing.html
+++ b/pricing.html
@@ -171,6 +171,40 @@
                 </div>
             </div>
             <!--/.row -->
+            <div class="col-md-4">
+                <div class="pricing panel box bg-pastel-leaf">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">1-Month Subscription</h4>
+                        <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">350</span>
+                    </div>
+                    <!--/.panel-heading -->
+                    <div class="panel-body">
+                        <table class="table">
+                            <tr>
+                                <td><strong>4</strong> Hours of Shoot time within a 30 day period.</td>
+                            </tr>
+                            <tr>
+                                <td><strong>200+ photos</strong> Access to all edited images</td>
+                            </tr>
+                            <tr>
+                                <td><strong>2</strong> Personalized Presets.</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <ul>
+                                        <li><strong>Online Delivery (via Dropbox)</strong></li>
+                                        <li><strong>Photo print release for brand photography to use on website, Instagram or other social platforms.</strong></li>    
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <!--/.panel-body -->
+                    <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                </div>
+                <!--/.pricing -->
+            </div>
+            <!--/column -->
             <div class="row mt-3">
                 <div class="col-12 mx-auto text-center">
                     <p>All pricing includes processing time and set up. Unedited photos are sent upon request and free of charge.</p>
