--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
             </div>
             <!--/.item -->
             <div class="item col-md-4">
-              <a href="pereiraatxfotografia.pixieset.com">
+              <a href="https://pereiraatxfotografia.pixieset.com/">
                 <div class="box bg-white shadow p-30">
                   <figure class="main mb-30"><img src="style/images/art/si2.jpg" alt="" /></figure>
                   <h4>Photography Shop</h4>
