--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
                 <div class="box bg-white shadow p-30">
                   <figure class="main mb-30"><img src="style/images/art/si2.jpg" alt="" /></figure>
                   <h4>Photography Shop</h4>
-                  <p class="mb-10">Shop site to download, print and subscribe for photography services.</p>
+                  <p class="mb-10">Shop site to download and print your photos.</p>
                 </div>
                 <!-- /.box -->
               </a>
