Added subscription to site

--- a/pricing.html
+++ b/pricing.html
@@ -165,46 +165,121 @@
             <!--/.row -->
             <div class="row mt-3">
                 <div class="col-4 mx-auto">
-                    <div class="pricing panel box bg-pastel-violet">
+                    <div class="pricing panel box bg-pastel-lavender">
                         <div class="panel-heading">
                             <h4 class="panel-title">Social Medial Photography Subscription</h4>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-lavender">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">1 Month Subscription</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">350</span>
+                        </div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1</strong> location</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>4 hour</strong> of shoot time within a 30-day period.</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>200+</strong> Access to all edited images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery via Pixieset</strong></li>
+                                            <li><strong>Photo Print Release and branded with your logo best for social media platform</strong></li>
+                                            <li><strong>2 Personalized Presets</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                    </div>
+                    <!--/.pricing -->
+                </div>
+                <!--/column -->
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-rose">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Longhorn Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">175</span>
+                                <span class="price-duration">per session</span></div>
+                        </div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1</strong> location</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>60</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>20</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                    </div>
+                    <!--/.pricing -->
+                </div>
+                <!--/column -->
+                <div class="col-md-4">
+                    <div class="pricing panel box bg-pastel-leaf">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">Lady Bird Package</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">250</span>
+                                <span class="price-duration">per session</span></div>
+                        </div>
+                        <!--/.panel-heading -->
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td><strong>1-2</strong> location (Less than 20 min drive)</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>90</strong> minute session</td>
+                                </tr>
+                                <tr>
+                                    <td><strong>45</strong> Digital Images</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <ul>
+                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
+                                            <li><strong>Photo Print Release</strong></li>    
+                                        </ul>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--/.panel-body -->
+                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                    </div>
+                    <!--/.pricing -->
+                </div>
+                <!--/column -->
             </div>
             <!--/.row -->
-            <div class="col-md-4">
-                <div class="pricing panel box bg-pastel-leaf">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">1-Month Subscription</h4>
-                        <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">350</span>
-                    </div>
-                    <!--/.panel-heading -->
-                    <div class="panel-body">
-                        <table class="table">
-                            <tr>
-                                <td><strong>4</strong> Hours of Shoot time within a 30 day period.</td>
-                            </tr>
-                            <tr>
-                                <td><strong>200+ photos</strong> Access to all edited images</td>
-                            </tr>
-                            <tr>
-                                <td><strong>2</strong> Personalized Presets.</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <ul>
-                                        <li><strong>Online Delivery (via Dropbox)</strong></li>
-                                        <li><strong>Photo print release for brand photography to use on website, Instagram or other social platforms.</strong></li>    
-                                    </ul>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <!--/.panel-body -->
-                    <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
-                </div>
-                <!--/.pricing -->
-            </div>
-            <!--/column -->
             <div class="row mt-3">
                 <div class="col-12 mx-auto text-center">
                     <p>All pricing includes processing time and set up. Unedited photos are sent upon request and free of charge.</p>
