--- a/pricing.html
+++ b/pricing.html
@@ -177,7 +177,7 @@
                     <div class="pricing panel box bg-pastel-lavender">
                         <div class="panel-heading">
                             <h4 class="panel-title">1 Month Subscription</h4>
-                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">350</span>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">350</span></div>
                         </div>
                         <!--/.panel-heading -->
                         <div class="panel-body">
@@ -196,14 +196,14 @@
                                         <ul>
                                             <li><strong>Online Delivery via Pixieset</strong></li>
                                             <li><strong>Photo Print Release and branded with your logo best for social media platform</strong></li>
-                                            <li><strong>2 Personalized Presets</strong></li>    
+                                            <li><strong>2 Personalized Presets</strong></li>      
                                         </ul>
                                     </td>
                                 </tr>
                             </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                        <div class="panel-footer"> <a href="https://pereiraatxfotografia.pixieset.com/subscription/store/" class="btn btn-white mb-10" role="button">Subscribe</a></div>
                     </div>
                     <!--/.pricing -->
                 </div>
@@ -211,34 +211,34 @@
                 <div class="col-md-4">
                     <div class="pricing panel box bg-pastel-rose">
                         <div class="panel-heading">
-                            <h4 class="panel-title">Longhorn Package</h4>
-                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">175</span>
-                                <span class="price-duration">per session</span></div>
+                            <h4 class="panel-title">3 Month Subscription</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">600</span></div>
                         </div>
                         <!--/.panel-heading -->
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
-                                    <td><strong>1</strong> location</td>
+                                    <td><strong>3</strong> locations (Optional)</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>60</strong> minute session</td>
+                                    <td><strong>12 Hours</strong> of shoot time within a 90 day period.</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>20</strong> Digital Images</td>
+                                    <td><strong>500+</strong> Acccess to all edited images.</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <ul>
-                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
-                                            <li><strong>Photo Print Release</strong></li>    
+                                            <li><strong>Online Delivery via Pixieset</strong></li>
+                                            <li><strong>Photo Print Release and branded with your logo best for social media platform</strong></li>
+                                            <li><strong>2 Personalized Presets</strong></li>    
                                         </ul>
                                     </td>
                                 </tr>
                             </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                        <div class="panel-footer"> <a href="https://pereiraatxfotografia.pixieset.com/subscription/store/" class="btn btn-white mb-10" role="button">Subscribe</a></div>
                     </div>
                     <!--/.pricing -->
                 </div>
@@ -246,34 +246,34 @@
                 <div class="col-md-4">
                     <div class="pricing panel box bg-pastel-leaf">
                         <div class="panel-heading">
-                            <h4 class="panel-title">Lady Bird Package</h4>
-                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">250</span>
-                                <span class="price-duration">per session</span></div>
+                            <h4 class="panel-title">6 Month Subscription</h4>
+                            <div class="price color-dark"> <span class="price-currency">$</span><span class="price-value">1,150</span></div>
                         </div>
                         <!--/.panel-heading -->
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
-                                    <td><strong>1-2</strong> location (Less than 20 min drive)</td>
+                                    <td><strong>3</strong> locations (Optional)</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>90</strong> minute session</td>
+                                    <td><strong>24 Hours</strong> of shoot time within a 180 day period.</td>
                                 </tr>
                                 <tr>
-                                    <td><strong>45</strong> Digital Images</td>
+                                    <td><strong>1,000+</strong> Access to all edited images</td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <ul>
-                                            <li><strong>Online Delivery & Printing Options (via Pixieset)</strong></li>
-                                            <li><strong>Photo Print Release</strong></li>    
+                                            <li><strong>Online Delivery via Pixieset</strong></li>
+                                            <li><strong>Photo Print Release and branded with your logo best for social media platform</strong></li>
+                                            <li><strong>2 Personalized Presets</strong></li>      
                                         </ul>
                                     </td>
                                 </tr>
                             </table>
                         </div>
                         <!--/.panel-body -->
-                        <div class="panel-footer"> <a href="#" class="btn btn-white mb-10" role="button">Buy Session</a></div>
+                        <div class="panel-footer"> <a href="https://pereiraatxfotografia.pixieset.com/subscription/store/" class="btn btn-white mb-10" role="button">Subscribe</a></div>
                     </div>
                     <!--/.pricing -->
                 </div>
